--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/macos,python,django
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,python,django
 
+localapptempdir/
+
 ### Django ###
 *.log
 *.pot
